--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<html>
+    <head>
+        This is header
+    </head>
 <body>
-    A newly added file for javascript learning.
+
+    <p> body </p>
+    <script>
+     //   let name = 'Ravi';
+     //   console.log(name);
+     //   console.log(typeof(name));
+     //   name = 300;
+     //   console.log(typeof(name));
+     //   let varr = undefined;
+     //   console.log(varr);
+     //   console.log(typeof(varr));
+
+        myName = 'test';
+
+        function logName(parentd) {
+        console.log(undefined == parentd);
+        }
+
+        logName(myName);
+
+        //var myName;
+    </script>
 </body>
-</html>
+    </html>
