--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      //   console.log(varr);
      //   console.log(typeof(varr));
 
-        myName = 'test';df
+        myName = 'test';
 
         function logName(parentd) {
         console.log(undefined == parentd);
