--- a/retrieveProp.html
+++ b/retrieveProp.html
@@ -15,9 +15,9 @@
       age:31, 
     };
 
-    for (let jum in person)
-      if(typeof(jum[person] === 'string'))
-        console.log(jum, person[jum]);
+    for (let key in person)
+      if(typeof person[key] === 'string')
+        console.log(key, person[key]);
 </script>
 
 </body>
