--- a/stars.html
+++ b/stars.html
@@ -9,18 +9,23 @@
   stars
   <script>
 
-    function stars(row){
+  function stars(row){
 
-      for (let i = 1; i<=row, i++;){
-
-      }
+  for (let i = 1; i<=row, i++;){
+    printStar(i);
 
     }
 
-    function printstar(num){
+  }
+  let a = 1;
 
-      
-    }
+
+  function printStar(num){
+
+  for (let j = 1; j<=num, j++;)
+    console.log('a');
+
+  }
 
   </script>
 </body>
