--- a/stars.html
+++ b/stars.html
@@ -9,23 +9,14 @@
   stars
   <script>
 
-  function stars(row){
 
-  for (let i = 1; i<=row, i++;){
-    printStar(i);
+ printStar(10);
 
-    }
-
-  }
-  let a = 1;
-
-
-  function printStar(num){
-
-  for (let j = 1; j<=num, j++;)
-    console.log('a');
-
-  }
+ function printStar(rows){
+  let stars = '';
+  for (let k = 1; k<=rows; k++)
+  console.log(stars += '*');
+ }
 
   </script>
 </body>
