--- a/factory_function.html
+++ b/factory_function.html
@@ -19,8 +19,9 @@
       output(){
         console.log('The parameters are ' + parm1, parm2);
       }
-    }
+    };
   }
+  createCircle(circle1,5,2,add);
 </script>
 </body>
 </html>
