--- a/factory_function.html
+++ b/factory_function.html
@@ -9,19 +9,17 @@
 <h1>Factory Function</h1>    
 
 <script>
-  function createCircle(newObject,parm1,parm2,func1){
-    const newObject = {
+function createCircle(parm1,parm2){
+    return {
       parm1,
       parm2,
-      func1(){
-        result = parm1+parm2;
-      },
-      output(){
-        console.log('The parameters are ' + parm1, parm2);
+      func1() {
+        console.log('this is printed');
       }
     };
   }
-  createCircle(circle1,5,2,add);
+  const c1 = createCircle(5,2);
+    console.log(c1);
 </script>
 </body>
 </html>
