--- a/11 factory_function.html
+++ b/11 factory_function.html
@@ -7,6 +7,36 @@
 </head>
 <body>
 <h1>Factory Function</h1>    
+<pre>
+  <code>
+
+    function createCircle(parm1,parm2){
+      return {
+        parm1: parm1,
+        parm2: parm2, 
+        myfunc() {
+          console.log('Calling myfunc ');
+          result = parm1+parm2;
+          results = 'The addition is ' + result;
+          return results;
+        },
+        output() {
+          console.log('Calling output function ' + parm1, parm2);
+        }
+      };
+    }
+    const circle1 = createCircle(5,2);
+    console.log('>>>>>logging the circle1 object')
+    console.log(circle1);
+    console.log('>>>>>logging the circle1.myfunc() function');
+    console.log(circle1.myfunc());
+    console.log('>>>>>Calling the circle1.output() function directly');
+    circle1.output();
+    console.log('>>>>>Assigning the output of myfunc() to a variable called final_result');
+    let final_result = circle1.myfunc();
+    console.log('>>>>>Logging the return value from circle1.myfunc() ' + final_result);
+  </code>
+</pre>
 
 <script>
 function createCircle(parm1,parm2){
