--- a/12 constructor.html
+++ b/12 constructor.html
@@ -34,7 +34,7 @@ function Circle(radius,conname) {
   console.log(inner.constructor);
 
   let myvar1 = 1;
-  console.log(myvar1.constr)
+  console.log(myvar1.constructor)
 
   </script>
 </body>
